Initial BlockFactory - move creation of blocks and vectors